fixed scrollbar problem

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ section {
 
 #index-content #index-main:hover {
   letter-spacing: 1pt;
-  transform: translateY(5px);
+  transform: translateY(-5px);
 }
 
 #about-socials {
